--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -99,7 +99,7 @@ a img:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-bottom: 1px solid #00000033;
+  border-bottom: 20px solid #8d0c0c;
 }
 
 .work h2,
@@ -121,6 +121,14 @@ a img:hover {
 
 .margin {
   margin-bottom: 5em;
+}
+
+.contact {
+  background-color: #2e2d2d;
+}
+
+.contact h2 {
+  color: #edf2f4;
 }
 
 .contact a {
