--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -125,6 +125,9 @@ a img:hover {
 
 .contact {
   background-color: #2e2d2d;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10em;
 }
 
 .contact h2 {
@@ -132,14 +135,12 @@ a img:hover {
 }
 
 .contact a {
-  font-size: 5em;
+  font-size: 3em;
   margin: 1em auto;
   text-align: center;
+  transition: 0.5s;
 }
 
-.links {
-  display: flex;
-  justify-content: space-between;
-  font-style: none;
-  margin: 0% 20em;
+.contact a:hover {
+  background-color: #1b1b1b;
 }
