--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -45,7 +45,7 @@ h4 {
 
 li {
   padding: 0.7em;
-  border-radius: 0.2em;
+  border-radius: 8px;
   letter-spacing: 0.1em;
   font-size: 1.1em;
   background-color: #9d0208;
