--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -14,6 +14,7 @@ h4 {
 .about {
   background-image: url(./../background2.jpeg);
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .title {
@@ -75,6 +76,9 @@ ul a {
   line-height: 1.3em;
   font-weight: 300;
   border: 1px solid #edf2f4;
+  min-width: 250px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 span {
@@ -83,15 +87,21 @@ span {
   color: #ffffff;
 }
 
-a img {
+.work a img {
   margin: 2em;
   border: 3px solid #0000008a;
   border-radius: 45px;
   box-shadow: 0px 12px 21px -5px rgba(0, 0, 0, 0.73);
   transition: 0.2s;
+  width: 100%;
+  height: auto;
 }
 
-a img:hover {
+.work a {
+  width: 50%;
+}
+
+.work a img:hover {
   box-shadow: 1px 17px 21px -2px rgba(0, 0, 0, 0.73);
 }
 
@@ -127,8 +137,10 @@ a img:hover {
 .contact {
   background-color: #2e2d2d;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
   padding: 0 10em;
+  flex-wrap: wrap;
 }
 
 .contact h2 {
@@ -137,7 +149,7 @@ a img:hover {
 
 .contact a {
   font-size: 3em;
-  margin: 1em auto;
+  margin: 1em;
   text-align: center;
   transition: 0.5s;
 }
