--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -26,9 +26,12 @@ h4 {
 .title h1 {
   font-size: 5em;
   letter-spacing: 0.1em;
+  width: 90%;
   padding-top: 1em;
   padding-bottom: 0.5em;
+  margin-left: 0.5em;
   color: #edf2f4;
+  text-align: center;
 }
 
 .title h3 {
@@ -69,7 +72,7 @@ ul a {
   margin-top: 1em;
   width: 30%;
   background-color: #03071e27;
-  border-radius: 10%;
+  border-radius: 30px;
   box-shadow: 11px 9px 9px 5px rgba(0, 0, 0, 0.72);
   color: #edf2f4;
   letter-spacing: 0.1em;
@@ -87,8 +90,17 @@ span {
   color: #ffffff;
 }
 
+.work {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border-bottom: 20px solid #8d0c0c;
+  border-top: 20px solid #8d0c0c;
+}
+
 .work a img {
-  margin: 2em;
+  margin: 2em 0;
   border: 3px solid #0000008a;
   border-radius: 45px;
   box-shadow: 0px 12px 21px -5px rgba(0, 0, 0, 0.73);
@@ -105,18 +117,10 @@ span {
   box-shadow: 1px 17px 21px -2px rgba(0, 0, 0, 0.73);
 }
 
-.work {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-bottom: 20px solid #8d0c0c;
-  border-top: 20px solid #8d0c0c;
-}
-
 .work h2,
 .contact h2 {
   font-size: 2.2em;
-  padding: 2em;
+  padding: 2em 0;
 }
 
 .work h3 {
