--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -41,13 +41,11 @@ h4 {
 }
 
 .title {
-  /*   width: 70%; */
   text-align: center;
   padding-bottom: 9em;
 }
 
 .title h1 {
-  /*   font-size: 5em; */
   letter-spacing: 0.1em;
   width: 90%;
   padding-top: 1.5em;
@@ -58,7 +56,6 @@ h4 {
 }
 
 .title h3 {
-  /*   font-size: 1.5em; */
   letter-spacing: 0.1em;
   color: #edf2f4;
   margin-top: 1em;
@@ -74,7 +71,6 @@ li {
   padding: 0.7em;
   border-radius: 8px;
   letter-spacing: 0.1em;
-  /*   font-size: 1.1em; */
   background-color: #9d0208;
   box-shadow: 11px 9px 9px 5px rgba(0, 0, 0, 0.72);
 }
@@ -142,18 +138,15 @@ span {
 
 .work h2,
 .contact h2 {
-  /*   font-size: 2.2em; */
   padding: 2em 0;
 }
 
 .work h3 {
-  /*   font-size: 1.5em; */
   padding-top: 2em;
 }
 
 .work span {
   color: #000000;
-  /*   font-size: 0.7em; */
   font-family: "Nunito", sans-serif;
 }
 
@@ -166,7 +159,7 @@ span {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 0 10em;
+  width: 100%;
   flex-wrap: wrap;
 }
 
@@ -192,5 +185,21 @@ span {
   (orientation: portrait) {
   .about {
     padding: 0;
+  }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 480px),
+  (orientation: landscape) {
+  .about {
+    padding: 0;
+  }
+  .contact {
+    flex-wrap: nowrap;
+  }
+  .contact a {
+    font-size: 0.8em;
+  }
+  .contact h3 {
+    padding: 1em;
   }
 }
