--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -86,13 +86,13 @@ ul a {
   transition: 0.3s;
 }
 
-a:hover {
+.about a:hover {
   border: 1px inset #a3a3a3a2;
   border-radius: 0px;
   color: #ffffff;
 }
 
-li:hover {
+.about li:hover {
   background-color: #83060ab6;
   border-radius: 0px;
   color: #ffffff;
@@ -205,6 +205,7 @@ span {
   }
   .about {
     padding: 0;
+    min-height: -webkit-fill-available;
   }
   .contact {
     flex-wrap: nowrap;
