--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -82,19 +82,11 @@ ul a {
   text-decoration: none;
   color: #ffffff;
   border: 1px solid #2c0203;
-  border-radius: 6px;
   transition: 0.3s;
-}
-
-.about a:hover {
-  border: 1px inset #a3a3a3a2;
-  border-radius: 0px;
-  color: #ffffff;
 }
 
 .about li:hover {
   background-color: #83060ab6;
-  border-radius: 0px;
   color: #ffffff;
 }
 
@@ -227,6 +219,9 @@ span {
 }
 
 @media only screen and (min-width: 320px) and (max-width: 768px) and (orientation: landscape) {
+  html {
+    width: 100%;
+  }
   .contact {
     flex-wrap: nowrap;
   }
