--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -218,7 +218,8 @@ span {
   }
 }
 
-@media only screen and (min-width: 400px) and (max-width: 900px) {
+@media only screen and (min-width: 500px) and (max-width: 900px),
+  (orientation: landscape) {
   html {
     width: 100%;
   }
