--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -138,7 +138,7 @@ span {
   box-shadow: 0px 12px 21px -5px rgba(0, 0, 0, 0.73);
   transition: 0.2s;
   width: 80%;
-  height: auto;
+  height: 180px;
 }
 
 .work a {
