--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,7 +1,7 @@
 html {
   scroll-behavior: smooth;
   margin: 0%;
-  font-family: "Nunito", sans-serif;
+  font-family: "Inconsolata", sans-serif;
   font-size: calc(1em + 1vw);
 }
 
